# coverage-lsp

./: Cargo.toml  ChangeLog.md  README.md
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml
.zed/: settings.json
coverage-lsp/: Cargo.toml  lcov.info
coverage-lsp/src/: coverage_lsp.rs  coverage_report.rs  file_coverage.rs  main.rs  settings.rs
coverage-lsp/src/settings/: serde.rs
coverage-lsp/tests/: lcov.info
zed-coverage-lsp/: Cargo.toml  ChangeLog.md  extension.toml
zed-coverage-lsp/src/: lib.rs
