[package]
description = "Code Coverage Language Server"
repository = "https://github.com/fargies/coverage-lsp"
readme = "../README.md"
name = "coverage-lsp"
version = "1.0.4"
edition = "2024"
license = "Zlib"

[dependencies]
csscolorparser = { version = "0.8.2", features = ["serde"] }
humantime-serde = "1.1.1"
lcov-parser = "3.2.2"
serde = { version = "1.0.228", features = ["rc"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = [
    "io-std",
    "macros",
    "rt-multi-thread",
    "fs",
    "time",
] }
tower-lsp = "0.20.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
ctor = "0.6.3"

[features]
default = ["notifications", "color_provider"]
# Implement coverage display as diagnostics
diagnostic_provider = []
# Send document updates to trigger a coloring refresh
notifications = []
# Implement coverage display as coloring
color_provider = []

[package.metadata.release]
pre-release-hook = [
    "git",
    "cliff",
    "--repository=..",
    "--output=../ChangeLog.md",
    "--tag=coverage-lsp-{{version}}",
    "--tag-pattern=coverage-lsp-v.*",
    "--exclude-path=zed-coverage-lsp/**",
]
