[package]
description = "Zed editor extension for coverage-lsp"
repository = "https://github.com/fargies/coverage-lsp"
name = "zed-coverage-lsp"
version = "1.0.0"
edition = "2024"
license = "Zlib"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0.149"
zed_extension_api = "^0.7.0"

[package.metadata.release]
publish = false
pre-release-replacements = [
    {file="extension.toml", search="^version = .*", replace="version = \"{{version}}\"", exactly=1},
]
pre-release-hook = ["git", "cliff", "-o", "ChangeLog.md", "--tag", "zed-coverage-lsp-{{version}}" ]
